@@ -26,19 +26,7 @@ import lombok.extern.slf4j.Slf4j;
  * 
  * scp -i D:\pzl\pzl.pem root@8.211.150.14:~/cook.log  .\
  */
-// [Unit]
-// After=network.target
 
-// [Service]
-// WorkingDirectory=/root
-// ExecStart=/root/app/jdk-25.0.3/bin/java -XX:+UseZGC -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.BasicAsyncLoggerContextSelector -Dlog4j2.asyncLoggerRingBufferSize=262144 -jar /root/taoli-1.0.jar
-// StandardOutput=journal
-// StandardError=journal
-// Restart=always
-// RestartSec=1
-
-// [Install]
-// WantedBy=multi-user.target
 
 @EnableScheduling
 @SpringBootApplication
